# qlcplus

./: .gitignore  CHANGELOG_DETAILED.md  CHANGELOG_SUMMARY.md  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DMG_BUILD_NOTES.md  GRIDQLC_INSTALL_mac.md  INSTALACJA_macOS_Apple_Silicon.md  QUICK_INSTALL_macOS.md  WINDOWS_BUILD_INSTRUCTIONS.md  WORKFLOW.md  analysis.md  cmake_install.cmake  cmake_uninstall.cmake  create-dmg-release.sh  detach3.qxw  git_diff.txt  install.sh  install_qlcplus.sh  propozycja modyfikacji efx.md  run_dimmerwave.sh  test detach2.qxw  timecodeimplementation.md  variables.cmake  variables.pri  vcmultipatcheditor.patch  vcmultiput.md
.cursor/rules/: macos-install.mdc
.github/workflows/: build-linux-v4.yml  build-macos-v4.yml  build-vcwidget-plugins.yml  build-windows-v4.yml  ci.yml  dmg-macos-intel-bigsur.yml  release.yml
.history/: CMakeLists_20250729070810.txt  vcmultiput_20250729142353.md
.history/main/: CMakeLists_20250729070822.txt
.history/plugins/: CMakeLists_20250729144338.txt
.history/ui/src/: CMakeLists_20250729090446.txt  CMakeLists_20250729090836.txt  CMakeLists_20250729111032.txt  (+9 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
engine/: cmake_install.cmake
engine/audio/: cmake_install.cmake
engine/src/: CMakeLists.txt  chaser.cpp  chaser.h  chaserrunner.cpp  chaserrunner.h  cmake_install.cmake  collection.cpp  collection.h  dmxdumpfactoryproperties.cpp  dmxdumpfactoryproperties.h  doc.cpp  doc.h  efx.cpp  efx.h  efxfixture.cpp  efxfixture.h  fadechannel.cpp  fadechannel.h  fixture.cpp  fixture.h  fixturegroup.cpp  fixturegroup.h  function.cpp  function.h  genericfader.cpp  licensemanager.cpp  licensemanager.h  mastertimer-unix.h  qlcclipboard.cpp  qlcclipboard.h  qlcconfig.h  qlcconfig.h.in  qlcconfig.h.noroot.in  qlccrypto.cpp  qlccrypto.h  qlcfixturehead.cpp  qlcfixturehead.h  qlcfixturemode.cpp  qlcfixturemode.h  qlcpalette.cpp  (+20 more)
engine/test/: cmake_install.cmake
fixtureeditor/: cmake_install.cmake  editmode.cpp  editmode.h  editmode.ui
fixtureeditor/qlcplus-fixtureeditor_autogen/: mocs_compilation.cpp
hotplugmonitor/: cmake_install.cmake
hotplugmonitor/src/: cmake_install.cmake  hpmprivate-iokit.cpp
hotplugmonitor/test/: cmake_install.cmake
launcher/: cmake_install.cmake
main/: NewProject.autosave.qxw  cmake_install.cmake  qlcplus-f2
main/qlcplus-f2_autogen/: mocs_compilation.cpp
plugins/: cmake_install.cmake
plugins/E1.31/: cmake_install.cmake
plugins/artnet/: cmake_install.cmake
plugins/dmxusb/: cmake_install.cmake
plugins/enttecwing/: cmake_install.cmake
plugins/hid/: cmake_install.cmake
plugins/loopback/: cmake_install.cmake
plugins/midi/: cmake_install.cmake
plugins/os2l/: cmake_install.cmake
plugins/osc/: cmake_install.cmake
plugins/peperoni/: cmake_install.cmake
plugins/udmx/: cmake_install.cmake
plugins/vcwidgets/: VC_WIDGET_PLUGIN_DEV_GUIDE.md
plugins/vcwidgets/dmxnumeric/: CMakeLists.txt  dmxnumeric-1.0.0.qlcvcw  dmxnumeric-1.1.0.qlcvcw  dmxnumeric-1.2.0.qlcvcw  dmxnumeric-1.3.0.qlcvcw  dmxnumericconfigdialog.cpp  dmxnumericconfigdialog.h  dmxnumericplugin.cpp  dmxnumericplugin.h  dmxnumericwidget.cpp  dmxnumericwidget.h  manifest.json
plugins/vcwidgets/hello/: CMakeLists.txt  README.md  helloplugin.cpp  helloplugin.h  hellowidget.cpp  hellowidget.h
plugins/vcwidgets/infinityencoder/: CMakeLists.txt  infinityencoder-1.0.0.qlcvcw  infinityencoder-1.0.1.qlcvcw  infinityencoderconfigdialog.cpp  infinityencoderconfigdialog.h  infinityencoderplugin.cpp  infinityencoderplugin.h  infinityencoderwidget.cpp  infinityencoderwidget.h  manifest.json
plugins/vcwidgets/multibutton/: CMakeLists.txt  install-local.sh  manifest.json  multibutton-1.0.0.qlcvcw  multibutton-1.0.1.qlcvcw  multibutton-1.2.0.qlcvcw  multibutton-1.2.1.qlcvcw  multibutton-1.2.2.qlcvcw  multibutton-1.2.3.qlcvcw  multibuttonconfigdialog.cpp  multibuttonconfigdialog.h  multibuttonplugin.cpp  multibuttonplugin.h  multibuttonwidget.cpp  multibuttonwidget.h
plugins/vcwidgets/presettable/: CMakeLists.txt  manifest.json  presettable-1.0.0.qlcvcw  presettable.json  presettablecolumndialog.cpp  presettablecolumndialog.h  presettableconfigdialog.cpp  presettableconfigdialog.h  presettableplugin.cpp  presettableplugin.h  presettablewidget.cpp  presettablewidget.h
plugins/velleman/: cmake_install.cmake
qmlui/qml/: UISettings.qml
qmlui/virtualconsole/: vcframe.cpp  vcframe.h
resources/: cmake_install.cmake
resources/fixtures/: cmake_install.cmake
resources/gobos/: cmake_install.cmake
resources/inputprofiles/: cmake_install.cmake
resources/miditemplates/: cmake_install.cmake
resources/modifierstemplates/: cmake_install.cmake
resources/rgbscripts/: cmake_install.cmake
resources/samples/: cmake_install.cmake
tools/encrypt-content/: encrypt-content.pro  encrypt_v2.py  main.cpp  qlc-encrypt-content
tools/license-activator/: activatorwindow.cpp  activatorwindow.h  license-activator.pro  main.cpp
tools/test-crypto/: main.cpp  test-crypto.pro
tools/test-premium-content/: test_premium.js  test_premium.qlcscript
ui/: cmake_install.cmake
ui/src/: CMakeLists.txt  addchannelsgroup.cpp  addchannelsgroup.h  addchannelsgroup.ui  addfixture.cpp  addfixture.h  addfixture.ui  addressdelegate.cpp  app.cpp  app.h  channelsselection.cpp  channelsselection.h  channelsselection.ui  clickandgoslider.cpp  cmake_install.cmake  copyfunctionsettingsdialog.cpp  copyfunctionsettingsdialog.h  dmxdumpfactory.cpp  efxeditor.cpp  efxeditor.h  efxeditor.ui  fixturegroupeditor.cpp  fixturegroupeditor.h  fixturegroupeditor.ui  fixturemanager.cpp  fixturemanager.h  fixturemappingdialog.cpp  fixturemappingdialog.h  fixtureselection.cpp  fixturetreewidget.cpp  fixturetreewidget.h  functionmanager.cpp  functionmanager.h  functionselection.cpp  functionstreewidget.cpp  functionstreewidget.h  importfunctionsdialog.cpp  importfunctionsdialog.h  licensedialog.cpp  licensedialog.h  (+14 more)
ui/test/: cmake_install.cmake
webaccess/: cmake_install.cmake
webaccess/res/: cmake_install.cmake
webaccess/src/: cmake_install.cmake
(+921 files in other folders)
